# typeattack

./: Cargo.toml  LICENSE  README.md  rustfmt.toml  test.txt
.github/workflows/: build.yml  create-github-release.yaml  github-release.yml  macos.sh  release.yml  windows.sh
src/: arguments.rs  graphics.rs  main.rs  renderengine.rs  tmp.rs  typeattack.rs  typotack.rs  words.rs
src/crossterm/: mod.rs  strings.rs
