[package]
name = "typeattack"
version = "0.1.1-SNAPSHOT"
authors = ["AndreÌ Tietz <andre.tietz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
crossterm = { version = "0.18.0", features = ["event-stream"] }
futures = "0.3.12"
async-std = { version = "1.9.0", features = ["unstable"] }
