[package]
name = "typeattack"
version = "0.1.1-SNAPSHOT"
authors = ["AndreÌ Tietz <andre.tietz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
crossterm = { version = "0.18.0", features = ["event-stream"] }
futures = "0.3.19"
async-std = { version = "1.9.0", features = ["unstable"] }
