[package]
name = "typeattack"
version = "0.1.3-SNAPSHOT"
authors = ["AndreÌ Tietz <andre.tietz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
async-std = { version = "1.13.0", features = ["unstable"] }
